--- a/VASSALChatter/Views/ChatPage.xaml
+++ b/VASSALChatter/Views/ChatPage.xaml
@@ -6,58 +6,56 @@
 	Title="Chat"
 	Icon="chat.png">
 	<ContentPage.Content>
-		<ScrollView BackgroundColor="Purple">
-			<Grid Padding="0" RowSpacing="0" Focused="Grid_Focused" x:Name="mainGrid">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*" />
-				</Grid.ColumnDefinitions>
-				<Grid.RowDefinitions>
-					<RowDefinition Height="*" />
-					<RowDefinition Height="30" />
-				</Grid.RowDefinitions>
+		<Grid Padding="0" RowSpacing="0" Focused="Grid_Focused" x:Name="mainGrid">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*" />
+				<RowDefinition Height="30" />
+			</Grid.RowDefinitions>
 
-				<ListView x:Name="listView"
-					CachingStrategy="RecycleElement"
-			        ItemsSource="{Binding Messages}"
-			        HasUnevenRows="true"
-			        IsPullToRefreshEnabled="false"
-					SeparatorVisibility="None"
-					Focused="ListView_Focused"
-					Grid.Row="0"
-					ItemTapped="ListView_ItemTapped"
-					BackgroundColor="Yellow"
-					Margin="0,0,0,0">
-			      <ListView.ItemTemplate>
-			        <DataTemplate>
-			          <ViewCell>
-						<Label Text="{Binding Value}" FontSize="12" LineBreakMode="WordWrap" TextColor="{Binding Color}">
-							<Label.FontFamily>
-						        <OnPlatform x:TypeArguments="x:String">
-						            <OnPlatform.iOS>Helvetica</OnPlatform.iOS>
-						            <OnPlatform.Android></OnPlatform.Android>
-						            <OnPlatform.WinPhone></OnPlatform.WinPhone>
-						        </OnPlatform>
-						    </Label.FontFamily>
-						</Label>
-			          </ViewCell>
-			        </DataTemplate>
-			      </ListView.ItemTemplate>
-			    </ListView>
+			<ListView x:Name="listView"
+				CachingStrategy="RecycleElement"
+		        ItemsSource="{Binding Messages}"
+		        HasUnevenRows="true"
+		        IsPullToRefreshEnabled="false"
+				SeparatorVisibility="None"
+				Focused="ListView_Focused"
+				Grid.Row="0"
+				ItemTapped="ListView_ItemTapped"
+				Margin="0,0,0,0">
+		      <ListView.ItemTemplate>
+		        <DataTemplate>
+		          <ViewCell>
+					<Label Text="{Binding Value}" FontSize="14" LineBreakMode="WordWrap" TextColor="{Binding Color}">
+						<Label.FontFamily>
+					        <OnPlatform x:TypeArguments="x:String">
+					            <OnPlatform.iOS>Helvetica</OnPlatform.iOS>
+					            <OnPlatform.Android></OnPlatform.Android>
+					            <OnPlatform.WinPhone></OnPlatform.WinPhone>
+					        </OnPlatform>
+					    </Label.FontFamily>
+					</Label>
+		          </ViewCell>
+		        </DataTemplate>
+		      </ListView.ItemTemplate>
+		    </ListView>
 
-				<StackLayout
-					HorizontalOptions="FillAndExpand"
-					Grid.Row="1"
-					Orientation="Horizontal"
-					BackgroundColor="Blue"
-					Margin="0,0,0,0"
-					Padding="0,0,0,0">
-				
-					<Button WidthRequest="30" Text="X"></Button>
-					<Button WidthRequest="30" Text="!"></Button>
-					<Entry x:Name="MessageEntry" Text="{Binding MessageField}" HorizontalOptions="FillAndExpand" Keyboard="Text" Completed="ChatEntry_Completed" Placeholder="Message" ></Entry>
-					<Button WidthRequest="80" Text="Send" Clicked="SendButton_Clicked"></Button>
-				</StackLayout>
-			</Grid>
-	    </ScrollView>
+			<StackLayout
+				x:Name="buttonBar"
+				HorizontalOptions="FillAndExpand"
+				Grid.Row="1"
+				Orientation="Horizontal"
+				BackgroundColor="Blue"
+				Margin="0,0,0,0"
+				Padding="0,0,0,0">
+			
+				<Button WidthRequest="30" Text="X" TextColor="White"></Button>
+				<Button WidthRequest="30" Text="!" TextColor="White"></Button>
+				<Entry x:Name="MessageEntry" Text="{Binding MessageField}" HorizontalOptions="FillAndExpand" Keyboard="Text" Completed="ChatEntry_Completed" Placeholder="Message" ></Entry>
+				<Button WidthRequest="80" Text="Send" Clicked="SendButton_Clicked" TextColor="White"></Button>
+			</StackLayout>
+		</Grid>
 	</ContentPage.Content>
 </ContentPage>
